styles.css
:root {
    --modal: rgba(0,0,0,0.8);
    --blue: #092B40;
    --light_gray: #696969;
    --gray: #3a3e43;
    --orange: #c96700;
    --white: #f0f0f0;
    --off_white: #d6d6d6;
    --email-icon: #d1d1d1;
    --email:#9b9b9b;
    --phone-icon: #006680;
    --phone: #00485a;
    --linkedIn-icon: #0a66c2;
    --linkedIn: #0a4785;
    --github-icon: #696969;
    --github: #3a3e43;
    --resume-icon: #c96700;
    --resume: #864500;
}

html {
    scroll-behavior: smooth;
    scroll-padding-top: 8vh;
}

body {
    font-family: 'Nova Square', sans-serif;
    color: var(--white);
    justify-content: center;
    text-align: center;
    display: block;
    margin: 0;
}

.stop-scrolling {
    height: 100%;
    overflow-y: hidden;
}

#navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: var(--orange);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    width: 100vw;
}

#navbar li a {
    font-size: 25px;
    color: var(--white);
    text-align: center;
    padding: 20px 24px;
    text-decoration: none;
    float: left;
}

li a:hover {
    background-color: var(--light_gray);
}

h1 {
    font-size: 65px;
    color: var(--orange);
}

.welcomeSectionText > h3, .aboutMeSection > h3 {
    font-size: 25px;
}

P {
    font-size: 14px;
}

.welcomeSection {
    min-height: 100vh;
    background-image: url(Pictures/background.jpg);
    background-size: cover;
    background-color: black;
}

.welcomeSectionText {
    padding-top: 40vh;
    text-shadow: 3px 3px 3px black;
}

.aboutMeSection {
    min-height: 77vh;
    background-color: var(--blue);
    padding: 10vh 5vw 5vh 5vw;
}

.certificate {
    color: var(--light_gray);
    cursor: pointer;
}

.certificate:hover {
    color: var(--orange);
    transition: .6s ease;
}

.projects a:link, a:visited {
    color: var(--light_gray);
}

.projectsSection {
    min-height: 77vh;
    background-color: var(--gray);
    padding: 1px 20px 50px 20px;
}

.projects {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 50px;
    max-width: 1500px;
}

.project-tile {
    color: var(--light_gray);
    border-radius: 3px;
    padding: 10px;
    background-color: var(--off_white);
}

.project-tile:hover  {
    color: var(--orange);
    box-shadow: 0px 8px 16px 0px black;
    transform: translateY(-5px);
    transition: 0.4s ease-out;
    cursor: pointer;
}

.project-tile > h3 > .hover {
    color: var(--off_white);
}

.project-tile:hover  > h3 > .hover {
    color: var(--orange);
    transform: translateY(-5px);
    transition: 0.4s ease-out;
}

.projectImg {
    width: 100%;
    max-width: 350px;
}

.languages > p {
    display: inline-block;
    margin: 0px 0px 0px 0px;
}

#modal-container, #gallery-container {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 30px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: var(--modal);
}

#modal, #gallery {
    max-width: fit-content;
    margin: auto;
    left: 5px;
    right: 5px;
    position: absolute;
    animation-name: zoom;
    animation-duration: 0.6s;
}

#modalImg {
    margin: auto;
    display: block;
    width: auto;
    max-height: 90vh;
    max-width: 100%;
    animation-name: zoom;
    animation-duration: 0.3s;
}

@keyframes zoom {
    from {transform: scale(0)}
    to {transform: scale(1)}
}

.closeBtn {
    position: absolute;
    right: 10px;
    top: -40px;
    color: var(--resume-icon);
    font-size: 40px;
    font-weight: bold;
    transition: 0.4s;
}

.closeBtn:hover, .closeBtn:focus {
    color: var(--resume);
    cursor: pointer;
}

.slideNum {
    color: var(--orange);
    position: absolute;
    margin-top: -25px;
}

#dots {
    position: absolute;
    top: -25px;
    left: 5px;
    right: 5px;
}

.dots {
    display: inline-block;
    cursor: pointer;
    height: 10px;
    width: 10px;
    margin: 0 2px;
    background-color: var(--light_gray);
    border-radius: 50%;
    transition: background-color 0.6s ease;
}

.active, .dots:hover {
    background-color: var(--orange);
}

.gallery-imgs {
    object-fit: contain;
    width: 100%;
    max-height: 90vh;
}

.fade {
    animation: fade 1s;
}

@keyframes fade {
    from {opacity: .8;}
    to {opacity: 1;}
}

#prev, #next {
    background-color: var(--light_gray);
    cursor: pointer;
    position: absolute;
    top: 40%;
    width: auto;
    padding: 16px;
    color: var(--orange);
    font-weight: bold;
    font-size: 20px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

#prev {
    left: 0;
}

#next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

#prev:hover, #next:hover {
    color: var(--gray);
    background-color: var(--orange);
}

.link {
    position: absolute;
    top: -25px;
}

.link > a:hover, .link > a:hover .hover {
    transition: .7s;
    color: var(--orange);
}

#site-link {
    left: 10vw;
}

#coding-link {
    right: 10vw;
}

.hover {
    color: var(--modal);
}

.contacts {
    position: relative;
    height: 30px;
    text-align: center;
    align-items: center;
    font-size: 25px;
    margin: 20px;
    display: inline-block;
    text-transform: capitalize;
    padding: 0 6px;
    padding-top: 2px;
    border-radius: 3px;
}

a:link, a:visited {
    color: var(--white);
    text-decoration: none;
}

#email-icon, #phone-icon, #linkedIn-icon, #gitHub-icon, #resumeSite-icon {
    padding-right: 10px;
}

#email-link:hover, #phone-link:hover, #linkedIn-link:hover, #gitHub-link:hover, #resumeSite-link:hover {
    background-position: left;
    transition: all 1s ease;
}

#email-link > a:link, #email-link > a:visited {
    color: black;
}

#email-link {
    color: black;
    background: linear-gradient(to left, var(--email) 50%, var(--email-icon) 50%);
    background-size: 200% 100%;
    background-position: 66% 0%;
}

#phone-link {
    background: linear-gradient(to left, var(--phone) 50%, var(--phone-icon) 50%);
    background-size: 200% 100%;
    background-position: 72% 0%;
}

#linkedIn-link {
    background: linear-gradient(to left, var(--linkedIn) 50%, var(--linkedIn-icon) 50%);
    background-size: 200% 100%;
    background-position: 76% 0%;
}

#gitHub-link {
    background: linear-gradient(to left, var(--github) 50%, var(--github-icon) 50%);
    background-size: 200% 100%;
    background-position: 72% 0%;
}

#resumeSite-link {
    background: linear-gradient(to left, var(--resume) 50%, var(--resume-icon) 50%);
    background-size: 200% 100%;
    background-position: 83% 0%;
}

.contactSection {
    min-height: 63vh;
    background-color: var(--blue);
    padding: 20vh 5vw 1vh 5vw;
}

footer {
    min-height: 7vh;
    width: 100%;
    background-color: var(--gray);
    padding: 1vh 0 1vh 0;
}

/* Max Width Media Queries */

@media only screen and (max-width: 800px) {
    html {
        scroll-padding-top: 7.5vh;
    }

    #navbar li a {
        padding: 10px 24px;
    }

    .welcomeSectionText {
        padding-top: 22vh;
    }

    #site-link {
        left: 12vw;
    }

    #coding-link {
        right: 12vw;
    }
    
    .contactSection {
        padding: 1vh 5vw 5vh 5vw;
    }
}

@media only screen and (max-width: 680px) {
    .slideNum {
        top: 1px;
        font-size: 15px;
    }

    .link {
        top: -24px;
        font-size: 15px;
    }

    #site-link {
        left: 15vw;
    }

    #coding-link {
        right: 11vw;
    }

    #dots {
        top: -26px;
    }

    .dots {
        margin: 0 1px;
        height: 8px;
        width: 8px;
    }

    .closeBtn {
        font-size: 38px;
        top: -38px;
    }

    #prev, #next {
        padding: 14px;
        font-size: 18px;
    }
}

@media only screen and (max-width: 540px) {
    .slideNum {
        top: 2px;
        font-size: 13px;
    }

    .link {
        top: -23px;
        font-size: 13px;
    }

    #site-link {
        left: 14vw;
    }

    #coding-link {
        right: 11vw;
    }

    #dots {
        top: -27px;
    }

    .dots {
        margin: 0;
        height: 7px;
        width: 7px;
    }

    .closeBtn {
        font-size: 36px;
        top: -36px;
    }

    #prev, #next {
        padding: 12px;
        font-size: 16px;
    }
}

@media only screen and (max-width: 400px) {
    .slideNum {
        top: 3px;
        font-size: 12px;
    }

    .link {
        top: -22px;
        font-size: 12px;
    }

    #site-link {
        left: 13vw;
    }

    #coding-link {
        right: 9vw;
    }
    #dots {
        top: -28px;
    }

    .dots {
        margin: 0 -1px;
        height: 6px;
        width: 6px;
    }

    .closeBtn {
        font-size: 34px;
        top: -35px;
    }

    #prev, #next {
        padding: 10px;
        font-size: 14px;
    }
}

@media only screen and (max-width: 340px) {
    .slideNum {
        top: 3px;
        font-size: 11px;
    }

    .link {
        top: -22px;
        font-size: 11px;
    }

    #site-link {
        left: 13vw;
    }

    #coding-link {
        right: 9vw;
    }

    #dots {
        top: -27px;
    }

    .dots {
        margin: 0 -1.5px;
        height: 6px;
        width: 6px;
    }

    .closeBtn {
        font-size: 32px;
        top: -35px;
    }

    #prev, #next {
        padding: 8px;
        font-size: 12px;
    }
}

/* Max Height & landscape Media Queries */
@media only screen and (max-height: 540px) and (orientation: landscape) {
    .slideNum {
        top: 1px;
        font-size: 15px;
    }

    .link {
        top: -24px;
        font-size: 15px;
    }

    #coding-link {
        right: 8vw;
    }

    .dots {
        margin: 0 1.5px;
        height: 9px;
        width: 9px;
    }

    .closeBtn {
        font-size: 38px;
        top: -38px;
    }

    #prev, #next {
        padding: 15px;
        font-size: 19px;
    }
}


@media only screen and (max-height: 480px) and (orientation: landscape) {
    .slideNum {
        top: 2px;
        font-size: 14px;
    }

    .link {
        top: -22px;
        font-size: 14px;
    }

    #site-link {
        left: 9vw;
    }

    #coding-link {
        right: 7vw;
    }

    .dots {
        margin: 0 1px;
        height: 8px;
        width: 8px;
    }

    .closeBtn {
        font-size: 36px;
        top: -35px;
    }

    #prev, #next {
        padding: 14px;
        font-size: 18px;
    }
}

@media only screen and (max-height: 380px) and (orientation: landscape) {
    .slideNum {
        top: 3px;
        font-size: 13px;
    }

    .link {
        top: -22px;
        font-size: 13px;
    }

    #site-link {
        left: 10vw;
    }

    #coding-link {
        right: 8vw;
    }

    .dots {
        margin: 0;
        height: 7px;
        width: 7px;
    }

    .closeBtn {
        font-size: 34px;
        top: -35px;
    }

    #prev, #next {
        padding: 12px;
        font-size: 16px;
    }
}

@media only screen and (max-height: 300px) and (orientation: landscape) {
    .slideNum {
        top: 4px;
        font-size: 12px;
    }

    .link {
        top: -21px;
        font-size: 12px;
    }

    #site-link {
        left: 9vw;
    }

    #coding-link {
        right: 6vw;
    }

    .dots {
        margin: 0 -1px;
        height: 7px;
        width: 7px;
    }

    .closeBtn {
        font-size: 32px;
        top: -32px;
    }

    #prev, #next {
        padding: 11px;
        font-size: 14px;
    }
}

